# pars

./: .env.example  README.md  pyproject.toml
sql/: schema.sql
src/btc_analytics/: __init__.py  config.py  logging_utils.py
src/btc_analytics/cli/: main.py
src/btc_analytics/core/: aggregator.py  metrics.py  models.py  parser.py  pipeline.py  utxo.py
src/btc_analytics/db/: connection.py  repository.py
src/btc_analytics/extensions/: interfaces.py
src/btc_analytics/rpc/: client.py
tests/: test_aggregation_and_resume.py  test_config.py  test_metrics.py  test_parser_integration.py  test_pipeline_safety.py  test_rpc_retry.py  test_utxo.py
